[gd_scene load_steps=12 format=3 uid="uid://qcxm772t6ot2"]

[ext_resource type="Script" uid="uid://cdqq2vdu0qhs0" path="res://collectibles/completeGem/complete_gem.gd" id="1_ocs64"]
[ext_resource type="AudioStream" uid="uid://dxej787v3b1xy" path="res://Audio/tresure/slashCompleteGem.wav" id="3_5o136"]
[ext_resource type="AudioStream" uid="uid://hbjph6hq0fu3" path="res://Audio/jetslash sfx/SFX/Roblox Explosion Sound Effect.wav" id="4_yxb2c"]
[ext_resource type="Texture2D" uid="uid://ldkxh82a080a" path="res://Art/treasureHunter/gemma holder.png" id="5_64b8i"]
[ext_resource type="Texture2D" uid="uid://ciqqnr35ia7lu" path="res://Art/treasureHunter/gemma.png" id="6_ge5lb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ocs64"]
radius = 128.0

[sub_resource type="Animation" id="Animation_5o136"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("onscreenfx/white_screen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("onscreenfx/white_screen:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("onscreenfx/sauiohsdfaa:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("onscreenfx/sauiohsdfaa:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.299)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("fragments:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("fragments:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GemmaHolder:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -20)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GemmaHolder:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ocs64"]
resource_name = "collect"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("onscreenfx/white_screen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("onscreenfx/white_screen:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("onscreenfx/sauiohsdfaa:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("onscreenfx/sauiohsdfaa:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("fragments:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -50)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("fragments:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GemmaHolder:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -30)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("GemmaHolder:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_k6wjt"]
resource_name = "loop"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("onscreenfx/white_screen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("onscreenfx/sauiohsdfaa:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("fragments:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("fragments:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("fragments:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5o136"]
_data = {
&"RESET": SubResource("Animation_5o136"),
&"collect": SubResource("Animation_ocs64"),
&"loop": SubResource("Animation_k6wjt")
}

[sub_resource type="LabelSettings" id="LabelSettings_5o136"]
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[node name="complete_gem" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_ocs64")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ocs64")
disabled = true

[node name="anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_5o136")
}
autoplay = "loop"

[node name="fragments" type="Node2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
scale = Vector2(3, 3)

[node name="0" type="Sprite2D" parent="fragments"]
unique_name_in_owner = true
visible = false
position = Vector2(-16, -16)
texture = ExtResource("6_ge5lb")
hframes = 2
vframes = 2

[node name="1" type="Sprite2D" parent="fragments"]
unique_name_in_owner = true
visible = false
position = Vector2(16, -16)
texture = ExtResource("6_ge5lb")
hframes = 2
vframes = 2
frame = 1

[node name="2" type="Sprite2D" parent="fragments"]
unique_name_in_owner = true
visible = false
position = Vector2(-16, 16)
texture = ExtResource("6_ge5lb")
hframes = 2
vframes = 2
frame = 2

[node name="3" type="Sprite2D" parent="fragments"]
unique_name_in_owner = true
visible = false
position = Vector2(16, 16)
texture = ExtResource("6_ge5lb")
hframes = 2
vframes = 2
frame = 3

[node name="onscreenfx" type="CanvasLayer" parent="."]

[node name="white_screen" type="Polygon2D" parent="onscreenfx"]
visible = false
polygon = PackedVector2Array(-200, -200, -200, 870, 1500, 870, 1500, -200)

[node name="sauiohsdfaa" type="Label" parent="onscreenfx"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.299)
offset_left = 224.0
offset_top = 288.0
offset_right = 397.0
offset_bottom = 311.0
scale = Vector2(5, 5)
text = "SUGAR RUSH!!!!!!1111!!"
label_settings = SubResource("LabelSettings_5o136")

[node name="sfx" type="Node" parent="."]

[node name="slashed" type="AudioStreamPlayer" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("3_5o136")
volume_db = -5.0
bus = &"sfx"

[node name="slashed2" type="AudioStreamPlayer" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("4_yxb2c")
volume_db = -5.0
bus = &"sfx"

[node name="GemmaHolder" type="Sprite2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(2, 2)
texture = ExtResource("5_64b8i")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
